--- a/biodata.html
+++ b/biodata.html
@@ -1,102 +1,124 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Bio Data</title>
-    <link rel="stylesheet" href="style.css">
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biodata</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f4f4f4;
             color: #333;
         }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            background: #fff;
+        header {
+            background-color: #fabafc;
+            color: #fff;
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        h1, h2 {
             text-align: center;
-            color: #444;
         }
         table {
-            width: 100%;
+            width: 80%;
+            margin: 20px auto;
             border-collapse: collapse;
-            margin-top: 20px;
+            background-color: #f0f0f0;
         }
         th, td {
+            border: 1px solid #333;
             padding: 10px;
             text-align: left;
-            border: 1px solid #ddd;
         }
         th {
-            background-color: #f4f4f4;
+            background-color: #fbb5f2;
         }
         footer {
             text-align: center;
-            margin-top: 20px;
-            padding: 10px;
-            background: #333;
-            color: white;
+            padding: 10px 0;
+            background-color: #faaaf5;
+            color: #fff;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Biodata</h1>
+    <header>
+        <h1>My Biodata</h1>
+    </header>
+    <main>
         <table>
             <tr>
-                <th>Full Name</th>
+                <th colspan="2">Personal Information</th>
+            </tr>
+            <tr>
+                <td>Name</td>
                 <td>Diya Dadheech</td>
             </tr>
             <tr>
-                <th>Date of Birth</th>
-                <td>November 05, 2003</td>
+                <td>Date of Birth</td>
+                <td>November 5, 2003</td>
             </tr>
             <tr>
-                <th>Gender</th>
+                <td>Gender</td>
                 <td>Female</td>
             </tr>
             <tr>
-                <th>Father's Name</th>
-                <td>Hitesh Dadheech</td>
-            </tr>
-            <tr>
-                <th>Mother's Name</th>
-                <td>Kavita Dadheech</td>
-            </tr>
-            <tr>
-                <th>Address</th>
-                <td>CMR Institute oF Technology Bangalore</td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>+91-9610760019</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>dida22cse@cmrit.ac.in</td>
-            </tr>
-            <tr>
-                <th>Nationality</th>
+                <td>Nationality</td>
                 <td>Indian</td>
             </tr>
             <tr>
-                <th>Languages Known</th>
-                <td>English, Hindi, Tamil</td>
+                <td>Contact</td>
+                <td>dida22cse@cmrit.ac.in</td>
             </tr>
             <tr>
-                <th>Hobbies</th>
+                <th colspan="2">Education</th>
+            </tr>
+            <tr>
+                <td>High School</td>
+                <td>KMC Public School</td>
+            </tr>
+            <tr>
+                <td>Year of Graduation</td>
+                <td>2021</td>
+            </tr>
+            <tr>
+                <td>College</td>
+                <td>CMR Institute Of Technolofy</td>
+            </tr>
+            <tr>
+                <td>Degree</td>
+                <td>Bachelor of Science in Computer Science</td>
+            </tr>
+            <tr>
+                <td>Year of Graduation</td>
+                <td>2026</td>
+            </tr>
+            
+            <tr>
+                <th colspan="2">Skills</th>
+            </tr>
+            <tr>
+                <td>Programming Languages</td>
+                <td>Python, Java, JavaScript</td>
+            </tr>
+            <tr>
+                <td>Frameworks</td>
+                <td>React, Angular, Django</td>
+            </tr>
+            <tr>
+                <td>Tools</td>
+                <td>Git</td>
+            </tr>
+            <tr>
+                <th colspan="2">Hobbies</th>
+            </tr>
+            <tr>
+                <td>Hobbies</td>
                 <td>Reading, Traveling</td>
             </tr>
         </table>
-    </div>
-    <footer>© 2024 Diya Dadheech</footer>
+    </main>
+    <footer>
+        <p>&copy; 2024 Diya Dadheech</p>
+    </footer>
 </body>
 </html>
