--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f9;
-            color: #333;
+            color: #0c090c;
         }
         .container {
             max-width: 800px;
@@ -17,7 +17,7 @@
             background: #fff;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 5px rgba(123, 174, 232, 0.916);
         }
         h1, h2 {
             text-align: center;
@@ -25,7 +25,7 @@
         }
         h2 {
             margin-top: 20px;
-            border-bottom: 2px solid #ddd;
+            border-bottom: 2px solid #efc0c0;
             padding-bottom: 5px;
         }
         ul {
@@ -43,7 +43,7 @@
             border-collapse: collapse;
         }
         .section table, .section th, .section td {
-            border: 1px solid #ddd;
+            border: 1px solid #d1a8f9;
         }
         .section th, .section td {
             padding: 10px;
