--- a/biodata.html
+++ b/biodata.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #fabafc;
+            background-color: #221623;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -30,12 +30,12 @@
             text-align: left;
         }
         th {
-            background-color: #fbb5f2;
+            background-color: #f2ecf1;
         }
         footer {
             text-align: center;
             padding: 10px 0;
-            background-color: #faaaf5;
+            background-color: #2d1d2c;
             color: #fff;
         }
     </style>
