--- a/resume.html
+++ b/resume.html
@@ -151,7 +151,7 @@
         </section>
     </div>
 
-    <footer>© 2024 Jane Doe</footer>
+    <footer>© 2024 Diya Dadheech</footer>
 </body>
 </html>
 
