--- a/resume.html
+++ b/resume.html
@@ -49,12 +49,61 @@
             padding: 10px;
             text-align: left;
         }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .popup-content {
+            background: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 500px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+        .popup-content h3 {
+            margin: 0;
+            margin-bottom: 10px;
+        }
+        .popup-content p {
+            margin: 0;
+            margin-bottom: 15px;
+        }
+        .close-btn {
+            background: #f44336;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .close-btn:hover {
+            background: #e53935;
+        }
         footer {
             text-align: center;
             margin-top: 20px;
             padding: 10px;
             background: #333;
             color: white;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -67,9 +116,6 @@
             <a href="biodata.html">Bio Data</a>
         </nav>
     </header>
-    
-
-<body>
     <div class="container">
         <h1>Resume</h1>
         <section class="section">
@@ -137,10 +183,12 @@
         <section class="section">
             <h2>Projects</h2>
             <ul>
-                <li><strong>Pet Store Mangement System:</strong> Developed an e-commerce web app using CSS and MongoDB.</li>
-                
+                <li>
+                    <strong>Pet Store Management System:</strong> Developed an e-commerce web app using CSS and MongoDB.
+                </li>
+            </ul>
+            <button id="moreInfoBtn">More Info</button>
         </section>
-
 
         <section class="section">
             <h2>Hobbies</h2>
@@ -151,7 +199,36 @@
         </section>
     </div>
 
+    <div class="popup" id="popup">
+        <div class="popup-content">
+            <h3>About This Project</h3>
+            <p>
+                The Pet Store Management System is a comprehensive project that allows users to manage product inventory, view sales statistics, and make online purchases.
+            </p>
+            <button class="close-btn" id="closeBtn">Close</button>
+        </div>
+    </div>
+
     <footer>© 2024 Diya Dadheech</footer>
+
+    <script>
+        const moreInfoBtn = document.getElementById("moreInfoBtn");
+        const popup = document.getElementById("popup");
+        const closeBtn = document.getElementById("closeBtn");
+
+        moreInfoBtn.addEventListener("click", () => {
+            popup.style.display = "flex";
+        });
+
+        closeBtn.addEventListener("click", () => {
+            popup.style.display = "none";
+        });
+
+        window.addEventListener("click", (event) => {
+            if (event.target === popup) {
+                popup.style.display = "none";
+            }
+        });
+    </script>
 </body>
 </html>
-
