--- a/index.html
+++ b/index.html
@@ -3,6 +3,89 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background: #333;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            margin-top: 10px;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+        main {
+            text-align: center;
+            padding: 20px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            margin-top: 20px;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: #333;
+            color: white;
+            margin-top: 20px;
+        }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .popup-content {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            max-width: 400px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+        .close-btn {
+            background: #f44336;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .close-btn:hover {
+            background: #e53935;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -15,8 +98,49 @@
     </header>
     <main>
         <h2>Welcome!</h2>
-        <p>This is my personal website showcasing my resume and bio data.</p>
+        <p id="welcomeMessage">This is my personal website showcasing my resume and bio data.</p>
+        <button id="editButton">Edit Message</button>
+        <button id="popupButton">More Info</button>
     </main>
+    <div class="popup" id="popup">
+        <div class="popup-content">
+            <h3>About This Website</h3>
+            <p>This website is designed to showcase my resume and personal bio data. Navigate through the links above to explore more!</p>
+            <button class="close-btn" id="closePopup">Close</button>
+        </div>
+    </div>
     <footer>© 2024 My Website</footer>
+
+    <script>
+        // Popup functionality
+        const popup = document.getElementById('popup');
+        const popupButton = document.getElementById('popupButton');
+        const closePopup = document.getElementById('closePopup');
+
+        popupButton.addEventListener('click', () => {
+            popup.style.display = 'flex';
+        });
+
+        closePopup.addEventListener('click', () => {
+            popup.style.display = 'none';
+        });
+
+        window.addEventListener('click', (event) => {
+            if (event.target === popup) {
+                popup.style.display = 'none';
+            }
+        });
+
+        // Editing welcome message
+        const editButton = document.getElementById('editButton');
+        const welcomeMessage = document.getElementById('welcomeMessage');
+
+        editButton.addEventListener('click', () => {
+            const newMessage = prompt('Enter a new welcome message:', welcomeMessage.textContent);
+            if (newMessage) {
+                welcomeMessage.textContent = newMessage;
+            }
+        });
+    </script>
 </body>
 </html>
