--- a/biodata.html
+++ b/biodata.html
@@ -44,6 +44,11 @@
 <body>
     <header>
         <h1>My Biodata</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="resume.html">Resume</a>
+            <a href="biodata.html">Bio Data</a>
+        </nav>
     </header>
     <main>
         <table>
