--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
     <div class="popup" id="popup">
         <div class="popup-content">
             <h3>About This Website</h3>
-            <p>Hii!! This is Diya Dadheech</p>
+            <p>Welcome to My Personal Website!
+Explore my portfolio, resume, and bio data to learn more about my skills, projects, and achievements. This site is a showcase of my journey, passion, and dedication in the field of Computer Science and Engineering. Feel free to navigate through the pages and discover what I have to offer.
+
+Thank you for visiting!
+
+</p>
             <button class="close-btn" id="closePopup">Close</button>
         </div>
     </div>
